@@ -24,11 +24,20 @@ input,
 .visualNoPrint,
 #edit-bar,
 .overlay,
-#pfgqedit {
+#pfgqedit,
+.discussion {
     /* Hides all the elements irrelevant for presentations */
     display: none;
 }
-body {color:#000;}
 
-/* Hide comments when printing */
-.discussion { display:none; }
+* { background: transparent !important; color: black !important; text-shadow: none !important; } /* Black prints faster: sanbeiji.com/archives/953 */
+a, a:visited { color: #444 !important; text-decoration: underline; }
+/*a[href]:after { content: " (" attr(href) ")"; }
+abbr[title]:after { content: " (" attr(title) ")"; }*/
+/*.ir a:after { content: ""; }*/  /* Don't show links for images */
+pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */ 
+tr, img { page-break-inside: avoid; }
+@page { margin: 0.5cm; }
+p, h2, h3 { orphans: 3; widows: 3; }
+h2, h3{ page-break-after: avoid; }
